--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2801,7 +2801,7 @@
 		background-color: #4686a0;
 		color: rgba(255, 255, 255, 0.75);
 		background-attachment: fixed,							fixed,							fixed;
-		background-image: url("images/overlay2.png"), url("images/overlay3.svg"), linear-gradient(45deg, #F9DE09  5%, #3C0046 30%, #3C0046 95%);
+		background-image: url("images/overlay1.png")/*, url("images/overlay1.svg"), linear-gradient(45deg, #F9DE09  5%, #3C0046 30%, #3C0046 95%);*/
 		background-position: top left,						center center,					center center;
 		background-size: auto,							cover,							cover;
 		overflow: hidden;
