--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2985,10 +2985,10 @@
 
 	#footer {
 		padding: 6em 0 6em 0 ;
-		background-color: #4686a0;
+		background-color: #ffffff;
 		color: rgba(255, 255, 255, 0.75);
 		background-attachment: fixed,							fixed,							fixed;
-		background-image: url("images/overlay2.png"), url("images/overlay4.svg"), linear-gradient(45deg, #F9DE09  5%, #3C0046 30%, #3C0046 95%);
+		background-image: url("images/overlay2.png"), url("images/overlay4.svg");
 		background-position: top left,						center center,					center center;
 		background-size: auto,							cover,							cover;
 		text-align: center;
