--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2985,7 +2985,7 @@
 
 	#footer {
 		padding: 6em 0 6em 0 ;
-		background-color: ##D3D3D3;
+		background-color: #D3D3D3;
 		color: rgba(255, 255, 255, 0.75);
 		background-attachment: fixed,							fixed,							fixed;
 		background-image: url("images/overlay2.png"), url("images/overlay4.svg");
